--- a/frontend/translations/id.po
+++ b/frontend/translations/id.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "PO-Revision-Date: 2022-09-23 20:54+0000\n"
 "Last-Translator: Dário <dariogomes@gmail.com>\n"
-"Language-Team: Indonesian <https://hosted.weblate.org/projects/penpot/"
-"frontend/id/>\n"
+"Language-Team: Indonesian "
+"<https://hosted.weblate.org/projects/penpot/frontend/id/>\n"
 "Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -223,6 +223,18 @@ msgstr "Bagikan prototipe"
 msgid "common.share-link.view-all"
 msgstr "Pilih Semua"
 
+#: src/app/main/ui/dashboard/projects.cljs
+msgid "dasboard.tutorial-hero.start"
+msgstr "Mulai tutorial"
+
+#: src/app/main/ui/dashboard/projects.cljs
+msgid "dasboard.walkthrough-hero.start"
+msgstr "Mulai tur"
+
+#: src/app/main/ui/dashboard/projects.cljs
+msgid "dasboard.walkthrough-hero.title"
+msgstr "Panduan Antarmuka"
+
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "dashboard.add-shared"
 msgstr "Tambahkan sebagai Pustaka Bersama"
@@ -321,23 +333,29 @@ msgstr ""
 "Pustaka bersama tidak akan dimasukkan dalam hasil ekspor dan tidak ada aset "
 "yang akan ditambahkan ke pustaka. "
 
-#: src/app/main/ui/dashboard/fonts.cljs
-msgid "dashboard.fonts.upload-all"
-msgstr "Unggah semua"
+msgid "dashboard.fonts.deleted-placeholder"
+msgstr "Fon dihapus"
+
+msgid "dashboard.fonts.empty-placeholder"
+msgstr "Tak ada fon khusus yang terpasang."
 
 #: src/app/main/ui/dashboard/fonts.cljs
 msgid "dashboard.fonts.fonts-added"
 msgid_plural "dashboard.fonts.fonts-added"
 msgstr[0] "%s fon ditambahkan"
 
+#: src/app/main/ui/dashboard/fonts.cljs
+msgid "dashboard.fonts.upload-all"
+msgstr "Unggah semua"
+
 msgid "dashboard.import"
 msgstr "Impor berkas Penpot"
 
-msgid "dashboard.fonts.empty-placeholder"
-msgstr "Tak ada fon khusus yang terpasang."
-
 msgid "dashboard.import.analyze-error"
 msgstr "Aduh! Kami tidak dapat mengimpor berkas ini"
+
+msgid "dashboard.import.import-error"
+msgstr "Terdapat masalah saat mengimpor berkas. Berkasnya tidak terimpor."
 
 msgid "dashboard.import.import-message"
 msgstr "%s berkas telah berhasil diimpor."
@@ -354,39 +372,59 @@ msgstr "Memproses media"
 msgid "dashboard.import.progress.process-page"
 msgstr "Memproses halaman: %s"
 
-#: src/app/main/ui/dashboard/projects.cljs
-msgid "dasboard.tutorial-hero.start"
-msgstr "Mulai tutorial"
+msgid "dashboard.import.progress.upload-data"
+msgstr "Mengunggah data ke server (%s/%s)"
 
-#: src/app/main/ui/dashboard/projects.cljs
-msgid "dasboard.walkthrough-hero.start"
-msgstr "Mulai tur"
-
-#: src/app/main/ui/dashboard/projects.cljs
-msgid "dasboard.walkthrough-hero.title"
-msgstr "Panduan Antarmuka"
-
-msgid "dashboard.import.import-error"
-msgstr "Terdapat masalah saat mengimpor berkas. Berkasnya tidak terimpor."
-
-msgid "dashboard.fonts.deleted-placeholder"
-msgstr "Fon dihapus"
+msgid "dashboard.import.progress.upload-media"
+msgstr "Mengunggah berkas: %s"
 
 #: src/app/main/ui/dashboard/team.cljs
 msgid "dashboard.invite-profile"
 msgstr "Undang ke tim"
 
+#: src/app/main/ui/dashboard/sidebar.cljs, src/app/main/ui/dashboard/sidebar.cljs
+msgid "dashboard.leave-team"
+msgstr "Tinggalkan tim"
+
+msgid "dashboard.libraries-and-templates"
+msgstr "Pustaka & Template"
+
+msgid "dashboard.libraries-and-templates.explore"
+msgstr "Jelajahi lebih banyak dan pelajari cara berkontribusi"
+
+msgid "dashboard.libraries-and-templates.import-error"
+msgstr "Terjadi masalah saat mengimpor template. Template tidak diimpor."
+
 #: src/app/main/ui/dashboard/libraries.cljs
 msgid "dashboard.libraries-title"
 msgstr "Pustaka"
+
+#: src/app/main/ui/dashboard/grid.cljs
+msgid "dashboard.loading-files"
+msgstr "memuat berkas-berkasmu …"
+
+msgid "dashboard.loading-fonts"
+msgstr "memuat fon-fon kamu …"
+
+#: src/app/main/ui/dashboard/project_menu.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "dashboard.move-to"
+msgstr "Pindahkan ke"
+
+#: src/app/main/ui/dashboard/file_menu.cljs
+msgid "dashboard.move-to-multi"
+msgstr "Pindahkan %s berkas ke"
+
+#: src/app/main/ui/dashboard/file_menu.cljs
+msgid "dashboard.move-to-other-team"
+msgstr "Pindahkan ke tim lain"
 
 #: src/app/main/ui/dashboard/projects.cljs, src/app/main/ui/dashboard/files.cljs
 msgid "dashboard.new-file"
 msgstr "+ Buat Berkas"
 
-#: src/app/main/ui/dashboard/file_menu.cljs
-msgid "dashboard.move-to-other-team"
-msgstr "Pindahkan ke tim lain"
+#: src/app/main/data/dashboard.cljs
+msgid "dashboard.new-file-prefix"
+msgstr "Berkas Baru"
 
 #: src/app/main/ui/dashboard/projects.cljs
 msgid "dashboard.new-project"
@@ -399,41 +437,3 @@ msgstr "Proyek Baru"
 #: src/app/main/ui/settings/profile.cljs
 msgid "dashboard.newsletter-msg"
 msgstr "Kirimkan saya berita, pembaruan produk dan rekomendasi tentang Penpot."
-
-msgid "dashboard.libraries-and-templates"
-msgstr "Pustaka & Template"
-
-msgid "dashboard.libraries-and-templates.explore"
-msgstr "Jelajahi lebih banyak dan pelajari cara berkontribusi"
-
-msgid "dashboard.libraries-and-templates.import-error"
-msgstr "Terjadi masalah saat mengimpor template. Template tidak diimpor."
-
-#: src/app/main/data/dashboard.cljs
-msgid "dashboard.new-file-prefix"
-msgstr "Berkas Baru"
-
-#: src/app/main/ui/dashboard/sidebar.cljs, src/app/main/ui/dashboard/sidebar.cljs
-msgid "dashboard.leave-team"
-msgstr "Tinggalkan tim"
-
-#: src/app/main/ui/dashboard/grid.cljs
-msgid "dashboard.loading-files"
-msgstr "memuat berkas-berkasmu …"
-
-msgid "dashboard.loading-fonts"
-msgstr "memuat fon-fon kamu …"
-
-msgid "dashboard.import.progress.upload-data"
-msgstr "Mengunggah data ke server (%s/%s)"
-
-msgid "dashboard.import.progress.upload-media"
-msgstr "Mengunggah berkas: %s"
-
-#: src/app/main/ui/dashboard/project_menu.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "dashboard.move-to"
-msgstr "Pindahkan ke"
-
-#: src/app/main/ui/dashboard/file_menu.cljs
-msgid "dashboard.move-to-multi"
-msgstr "Pindahkan %s berkas ke"
