:tada: Add unpublish option on context menu

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -1162,6 +1162,10 @@ msgstr "Delete invitation"
 msgid "labels.delete-multi-files"
 msgstr "Delete %s files"
 
+#: src/app/main/ui/dashboard/file_menu.cljs
+msgid "labels.unpublish-multi-files"
+msgstr "Unpublish %s files"
+
 #: src/app/main/ui/dashboard/projects.cljs, src/app/main/ui/dashboard/sidebar.cljs, src/app/main/ui/dashboard/files.cljs, src/app/main/ui/dashboard/files.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "labels.drafts"
 msgstr "Drafts"
@@ -1599,20 +1603,46 @@ msgstr[1] "Are you sure you want to delete these files?"
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-shared-confirm.scd-message"
 msgid_plural "modals.delete-shared-confirm.scd-message"
-msgstr[0] "This file has libraries that are being used in this file:"
-msgstr[1] "This file has libraries that are being used in these files:"
+msgstr[0] "Some of the assets in this file's library are in use here:"
+msgstr[1] "Some of the assets in these file's libraries are in use here:"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.delete-shared-confirm.scd-message-plural"
-msgid_plural "modals.delete-shared-confirm.scd-message-plural"
-msgstr[0] "These files have libraries that are being used in this file:"
-msgstr[1] "These files have libraries that are being used in these files:"
+msgid "modals.delete-shared-confirm.no-files-message"
+msgid_plural "modals.delete-shared-confirm.no-files-message"
+msgstr[0] "None of the assets in this file's library are in use. They will be deleted along with the file."
+msgstr[1] "None of the assets in these file's libraries are in use. They will be deleted along with the files."
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.unpublish-shared-confirm.no-files-message"
+msgid_plural "modals.unpublish-shared-confirm.no-files-message"
+msgstr[0] "None of the assets in this file's library are in use."
+msgstr[1] "None of the assets in these file's libraries are in use."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-shared-confirm.title"
 msgid_plural "modals.delete-shared-confirm.title"
 msgstr[0] "Deleting file"
 msgstr[1] "Deleting files"
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.delete-shared-confirm.hint"
+msgid_plural "modals.delete-shared-confirm.hint"
+msgstr[0] ""
+"If you delete it, those assets will move tothe local library"
+"of this file. Any unsued assets will be lost."
+msgstr[1] ""
+"If you delete it, those assets will move tothe local library"
+"of these files. Any unsued assets will be lost."
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.delete-shared-confirm.hint-plural"
+msgid_plural "modals.delete-shared-confirm.hint-plural"
+msgstr[0] ""
+"If you delete them, those assets will move tothe local library"
+"of this file. Any unsued assets will be lost."
+msgstr[1] ""
+"If you delete them, those assets will move tothe local library"
+"of these files. Any unsued assets will be lost."
 
 #: src/app/main/ui/dashboard/sidebar.cljs
 msgid "modals.delete-team-confirm.accept"
@@ -1745,8 +1775,20 @@ msgstr "Unpublish"
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.hint"
 msgid_plural "modals.unpublish-shared-confirm.hint"
-msgstr[0] "If you unpublish it, the assets in it became a library of this file."
-msgstr[1] "If you unpublish it, the assets in it became a library of these files."
+msgstr[0] "If you unpublish it, those assets will move to the local library of this file."
+msgstr[1] "If you unpublish it, those assets will move to the local library of these files."
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.unpublish-shared-confirm.hint-plural"
+msgid_plural "modals.unpublish-shared-confirm.hint-plural"
+msgstr[0] "If you unpublish them, those assets will move to the local library of this file."
+msgstr[1] "If you unpublish them, those assets will move to the local library of these files."
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.unpublish-shared-confirm.hint-plural"
+msgid_plural "modals.unpublish-shared-confirm.hint-plural"
+msgstr[0] "If you unpublish them, the assets in them became a library of this file."
+msgstr[1] "If you unpublish them, the assets in them became a library of these files."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.message"
@@ -1757,8 +1799,14 @@ msgstr[1] "Are you sure you want to unpublish these libraries?"
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.scd-message"
 msgid_plural "modals.unpublish-shared-confirm.scd-message"
-msgstr[0] "It's in use in this file:"
-msgstr[1] "It's in use in these files:"
+msgstr[0] "Some of the assets in this file's library are in use here:"
+msgstr[1] "Some of the assets in these file's libraries are in use here:"
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.unpublish-shared-confirm.scd-message-plural"
+msgid_plural "modals.unpublish-shared-confirm.scd-message-plural"
+msgstr[0] "Some of the assets in this file's library are in use here:"
+msgstr[1] "Some of the assets in these file's libraries are in use here:"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.title"
@@ -3481,18 +3529,6 @@ msgid "workspace.options.layout.gap"
 msgstr "Gap"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.h.center"
-msgstr "center"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.h.left"
-msgstr "left"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.h.right"
-msgstr "right"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
 msgid "workspace.options.layout.left"
 msgstr "Left"
 
@@ -3539,18 +3575,6 @@ msgstr "space between"
 #: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
 msgid "workspace.options.layout.top"
 msgstr "Top"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.v.bottom"
-msgstr "bottom"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.v.center"
-msgstr "center"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.v.top"
-msgstr "top"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/color_selection.cljs
 msgid "workspace.options.more-colors"
