--- a/frontend/translations/es.po
+++ b/frontend/translations/es.po
@@ -391,8 +391,8 @@ msgstr "Exportar librerias compartidas"
 
 msgid "dashboard.export.options.detach.message"
 msgstr ""
-"Las librerias compartidas no se incluirán en la exportación y ningún "
-"recurso será incluido en la librería. "
+"Las biblioteca compartidas no se incluirán en la exportación y ningún "
+"recurso será incluido en la biblioteca. "
 
 msgid "dashboard.export.options.detach.title"
 msgstr "Usar los recursos como objetos básicos"
@@ -1290,6 +1290,10 @@ msgstr "Eliminar invitation"
 msgid "labels.delete-multi-files"
 msgstr "Borrar %s archivos"
 
+#: src/app/main/ui/dashboard/file_menu.cljs
+msgid "labels.unpublish-multi-files"
+msgstr "Despublicar %s archivos"
+
 #: src/app/main/ui/dashboard/projects.cljs,
 #: src/app/main/ui/dashboard/sidebar.cljs,
 #: src/app/main/ui/dashboard/files.cljs,
@@ -1724,27 +1728,27 @@ msgstr "Eliminar conversación"
 
 #: src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-file-confirm.accept"
-msgstr "Eliminar archivo"
+msgstr "Borrar archivo"
 
 #: src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-file-confirm.message"
-msgstr "¿Seguro que quieres eliminar este archivo?"
+msgstr "¿Seguro que quieres borrar este archivo?"
 
 #: src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-file-confirm.title"
-msgstr "Eliminando archivo"
+msgstr "Borrando archivo"
 
 #: src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-file-multi-confirm.accept"
-msgstr "Eliminar archivos"
+msgstr "Borrar archivos"
 
 #: src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-file-multi-confirm.message"
-msgstr "¿Seguro que quieres eliminar %s archivos?"
+msgstr "¿Seguro que quieres borrar %s archivos?"
 
 #: src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-file-multi-confirm.title"
-msgstr "Eliminando %s archivos"
+msgstr "Borrando %s archivos"
 
 msgid "modals.delete-font-variant.message"
 msgstr ""
@@ -1800,30 +1804,46 @@ msgstr[1] "¿Seguro que quieres borrar estos archivos?"
 #: src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-shared-confirm.scd-message"
 msgid_plural "modals.delete-shared-confirm.scd-message"
-msgstr[0] ""
-"El archivo que quieres borrar tiene una librería que se está usando en este "
-"archivo:"
-msgstr[1] ""
-"El archivo que quieres borrar tiene una librería que se está usando en "
-"estos archivos:"
+msgstr[0] "Algunos elementos de esta biblioteca están siendo usados por:"
+msgstr[1] "Algunos elementos de estas biblitecas están siendo usados por:"
 
-#: src/app/main/ui/workspace/header.cljs,
-#: src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.delete-shared-confirm.scd-message-plural"
-msgid_plural "modals.delete-shared-confirm.scd-message-plural"
-msgstr[0] ""
-"Los archivos que quieres borrar tienen una librería que se está usando en "
-"este archivo:"
-msgstr[1] ""
-"Los archivos que quieres borrar tienen una librería que se está usando en "
-"estos archivos:"
-
-#: src/app/main/ui/workspace/header.cljs,
-#: src/app/main/ui/dashboard/file_menu.cljs
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-shared-confirm.title"
 msgid_plural "modals.delete-shared-confirm.title"
-msgstr[0] "Borrar archivo"
-msgstr[1] "Borrar archivos"
+msgstr[0] "Borrando archivo"
+msgstr[1] "Borrando archivos"
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.delete-shared-confirm.hint"
+msgid_plural "modals.delete-shared-confirm.hint"
+msgstr[0] ""
+"Si lo borras, esos elementos pasarán a formar parte de la biblioteca local "
+"de este archivo. Cualquier elemento en desuso se perderá."
+msgstr[1] ""
+"Si lo borras, los elementos pasarán a formar parte de la biblioteca local de "
+"estos archivos. Cualquier elemento en desuso se perderá."
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.delete-shared-confirm.hint-plural"
+msgid_plural "modals.delete-shared-confirm.hint-plural"
+msgstr[0] ""
+"Si los borras, esos elementos pasarán a formar parte de la biblioteca local "
+"de este archivo. Cualquier elemento en desuso se perderá."
+msgstr[1] ""
+"Si los borras, los elementos pasarán a formar parte de la biblioteca local de "
+"estos archivos. Cualquier elemento en desuso se perderá."
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.delete-shared-confirm.no-files-message"
+msgid_plural "modals.delete-shared-confirm.no-files-message"
+msgstr[0] "Ninguno de los elementos de su biblioteca están en uso. Se borrarán junto con el archivo."
+msgstr[1] "Ninguno de los elementos de sus bibliotecas están en uso. Se borrarán junto con el archivo."
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.unpublish-shared-confirm.no-files-message"
+msgid_plural "modals.unpublish-shared-confirm.no-files-message"
+msgstr[0] "Ninguno de los elementos de su biblioteca están en uso."
+msgstr[1] "Ninguno de los elementos de sus bibliotecas están en uso."
 
 #: src/app/main/ui/delete_shared.cljs
 msgid "modals.delete-shared.title"
@@ -1972,8 +1992,17 @@ msgstr[1] ""
 "Si la despublicas, los elementos pasarán a formar parte de la biblioteca de "
 "los archivos."
 
-#: src/app/main/ui/workspace/header.cljs,
-#: src/app/main/ui/dashboard/file_menu.cljs
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.unpublish-shared-confirm.hint-plural"
+msgid_plural "modals.unpublish-shared-confirm.hint-plural"
+msgstr[0] ""
+"Si las despublicas, los elementos pasarán a formar parte de la biblioteca "
+"del archivo."
+msgstr[1] ""
+"Si las despublicas, los elementos pasarán a formar parte de la biblioteca de "
+"los archivos."
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.message"
 msgid_plural "modals.unpublish-shared-confirm.message"
 msgstr[0] "¿Seguro que quieres despublicar esta biblioteca?"
@@ -1986,8 +2015,13 @@ msgid_plural "modals.unpublish-shared-confirm.scd-message"
 msgstr[0] "Está siendo usada en este archivo:"
 msgstr[1] "Está siendo usada en estos archivos:"
 
-#: src/app/main/ui/workspace/header.cljs,
-#: src/app/main/ui/dashboard/file_menu.cljs
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.unpublish-shared-confirm.scd-message-plural"
+msgid_plural "modals.unpublish-shared-confirm.scd-message-plural"
+msgstr[0] "Están siendo usadas en este archivo:"
+msgstr[1] "Están siendo usadas en estos archivos:"
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.title"
 msgid_plural "modals.unpublish-shared-confirm.title"
 msgstr[0] "Despublicar biblioteca"
@@ -1997,13 +2031,13 @@ msgstr[1] "Despublicar bibliotecas"
 #: src/app/main/ui/workspace/context_menu.cljs
 msgid "modals.update-remote-component-in-bulk.hint"
 msgstr ""
-"Vas a actualizar componentes en una librería compartida. Esto puede afectar "
+"Vas a actualizar componentes en una biblioteca compartida. Esto puede afectar "
 "a otros archivos que la usen."
 
 #: src/app/main/ui/workspace/sidebar/options/menus/component.cljs,
 #: src/app/main/ui/workspace/context_menu.cljs
 msgid "modals.update-remote-component-in-bulk.message"
-msgstr "Actualizar componentes en librería"
+msgstr "Actualizar componentes en biblioteca"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/component.cljs,
 #: src/app/main/ui/workspace/context_menu.cljs
@@ -2019,13 +2053,13 @@ msgstr "Cancelar"
 #: src/app/main/ui/workspace/context_menu.cljs
 msgid "modals.update-remote-component.hint"
 msgstr ""
-"Vas a actualizar un componente en una librería compartida. Esto puede "
+"Vas a actualizar un componente en una biblioteca compartida. Esto puede "
 "afectar a otros archivos que la usen."
 
 #: src/app/main/ui/workspace/sidebar/options/menus/component.cljs,
 #: src/app/main/ui/workspace/context_menu.cljs
 msgid "modals.update-remote-component.message"
-msgstr "Actualizar un componente en librería"
+msgstr "Actualizar un componente en biblioteca"
 
 #: src/app/main/ui/dashboard/team.cljs
 msgid "notifications.invitation-email-sent"
@@ -3898,18 +3932,6 @@ msgid "workspace.options.layout.gap"
 msgstr "Espacio"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.h.center"
-msgstr "centro"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.h.left"
-msgstr "izquierda"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.h.right"
-msgstr "derecha"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
 msgid "workspace.options.layout.left"
 msgstr "Izquierda"
 
@@ -3956,18 +3978,6 @@ msgstr "espaciar"
 #: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
 msgid "workspace.options.layout.top"
 msgstr "Arriba"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.v.bottom"
-msgstr "abajo"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.v.center"
-msgstr "centro"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/layout.cljs
-msgid "workspace.options.layout.v.top"
-msgstr "arriba"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/color_selection.cljs
 msgid "workspace.options.more-colors"
@@ -4719,7 +4729,7 @@ msgstr "Ignorar"
 
 #: src/app/main/data/workspace/libraries.cljs
 msgid "workspace.updates.there-are-updates"
-msgstr "Hay actualizaciones en librerías compartidas"
+msgstr "Hay actualizaciones en bibliotecas compartidas"
 
 #: src/app/main/data/workspace/libraries.cljs
 msgid "workspace.updates.update"
